Fixed a little bit more on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -81,6 +81,19 @@ header h1{
     margin-bottom: 10px;
 }
 
+@media only screen and (max-width: 992px){
+    #cowboy-tools{
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #cowboy-tools li{
+        display: inline-block;
+        width: 25%;
+    }
+}
+
 @media only screen and (max-width: 550px){
     #logo{
         font-size: 4rem;
@@ -102,9 +115,6 @@ header h1{
         margin-left: auto;
     }
 
-}
-
-@media only screen and (max-width: 992px){
     #cowboy-tools{
         width: 90%;
         margin-left: auto;
@@ -112,10 +122,14 @@ header h1{
     }
 
     #cowboy-tools li{
-        display: inline-block;
-        width: 25%;
+        display: block;
+        width: 60%;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
+
+
 
 
 
